# awtk-rust

./: README.md
awtk_rust_gen/: Cargo.toml  README.md  check_licenses.sh  deny.toml
awtk_rust_gen/docs/: changes.md
awtk_rust_gen/src/: args.rs  builder.rs  idl.rs  lib.rs  main.rs
hello_rust/: .gitignore  Cargo.toml  README.md  build.rs  sync_awtk.sh
hello_rust/design/default/ui/: home_page.xml
hello_rust/docs/: changes.md
hello_rust/scripts/: awtk_locator.py
hello_rust/src/: application.rs  helper.rs  lib.rs  main.rs
