[package]
name = "awtk_rust_gen"
version = "0.1.1"
edition = "2024"
authors = [
    "AWTK Develop Team",
    "Shen ZhaoKun <shenzhaokun@zlg.cn>",
]
description = "基于 rust-bindgen 的 AWTK 代码生成器"
license = "LGPL-2.1"

[dependencies]
bindgen = "0.71.1"
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
pyo3 = { version = "0.23.5", features = ["auto-initialize"] }  # 启用自动初始化
heck = "0.5.0"
colored = "3.0.0"